[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/ui/sketch_control/ControlPane.gd" type="Script" id=1]
[ext_resource path="res://src/ui/uart_console/UartConsole.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/collapsable/collapsable.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/themes/regular_button/regular_button.tres" type="Theme" id=4]
[ext_resource path="res://src/ui/sketch_control/SketchLog.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 1
border_color = Color( 0.290196, 0.278431, 0.278431, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.054902, 0.498039, 0.792157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.478431, 0.8, 1 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="ControlPane" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 22.0
custom_constants/margin_left = 0

[node name="SketchPath" type="Label" parent="VBoxContainer2"]
margin_right = 1280.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.929412, 0.929412, 1 )
text = "/home/ruthgerd/testino.ino"
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditorSwitch" type="ToolButton" parent="VBoxContainer2"]
visible = false
margin_left = 1220.0
margin_right = 1280.0
margin_bottom = 22.0
rect_min_size = Vector2( 60, 0 )
hint_tooltip = "Edit your sketch"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "editor"

[node name="Close" type="ToolButton" parent="VBoxContainer2"]
margin_right = 30.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 0 )
hint_tooltip = "Edit your sketch"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
enabled_focus_mode = 0
text = "x"

[node name="Padding3" type="Control" parent="."]
margin_top = 22.0
margin_right = 1280.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 5 )

[node name="SketchHeader" type="Label" parent="."]
margin_top = 27.0
margin_right = 1280.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Sketch"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingBox2" type="MarginContainer" parent="."]
margin_top = 57.0
margin_right = 1280.0
margin_bottom = 87.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="SketchButtons" type="HBoxContainer" parent="PaddingBox2"]
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Start" type="Button" parent="PaddingBox2/SketchButtons"]
margin_right = 421.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="PaddingBox2/SketchButtons"]
margin_left = 425.0
margin_right = 846.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Suspend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Compile" type="Button" parent="PaddingBox2/SketchButtons"]
margin_left = 850.0
margin_right = 1272.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
text = "Compile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding2" type="Control" parent="."]
margin_top = 87.0
margin_right = 1280.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 5 )

[node name="VehicleHeader" type="Label" parent="."]
margin_top = 92.0
margin_right = 1280.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Vehicle"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaddingBox" type="MarginContainer" parent="."]
margin_top = 122.0
margin_right = 1280.0
margin_bottom = 152.0
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="VehicleButtons" type="HBoxContainer" parent="PaddingBox"]
margin_left = 4.0
margin_right = 1276.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Reset" type="Button" parent="PaddingBox/VehicleButtons"]
margin_right = 634.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
text = "Reset pos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Follow" type="Button" parent="PaddingBox/VehicleButtons"]
margin_left = 638.0
margin_right = 1272.0
margin_bottom = 30.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
disabled = true
text = "Follow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="Control" parent="."]
margin_top = 152.0
margin_right = 1280.0
margin_bottom = 167.0
rect_min_size = Vector2( 0, 15 )

[node name="AttachmentsHeader" type="Label" parent="."]
margin_top = 167.0
margin_right = 1280.0
margin_bottom = 181.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Attachments"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
margin_top = 181.0
margin_right = 1280.0
margin_bottom = 678.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Attachments" type="VBoxContainer" parent="Scroll"]
margin_right = 1280.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="empty" type="Label" parent="Scroll/Attachments"]
margin_right = 1280.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
text = "no attachments found"
align = 1
valign = 1

[node name="Control" parent="Scroll/Attachments" instance=ExtResource( 3 )]
visible = false
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 61.0
heading_text = "Distance Sensor"

[node name="Label" type="Label" parent="Scroll/Attachments/Control"]
visible = false
margin_top = 22.0
margin_right = 304.0
margin_bottom = 53.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    Pin: 0
    Distance: 0.1m"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" parent="Scroll/Attachments" instance=ExtResource( 3 )]
visible = false
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 109.0
heading_text = "Brushed motor"

[node name="Label" type="Label" parent="Scroll/Attachments/Control2"]
visible = false
margin_top = 21.0
margin_right = 1280.0
margin_bottom = 69.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "    Pins: 1,2,3
    Direction: Forward
    Throttle: 80%"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" parent="." instance=ExtResource( 3 )]
margin_top = 678.0
margin_right = 1280.0
margin_bottom = 699.0
heading_text = "Log"

[node name="SketchLog" type="PanelContainer" parent="Log"]
visible = false
margin_top = 21.0
margin_right = 1280.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 8 )
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Log/SketchLog"]
margin_right = 1280.0
margin_bottom = 300.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Log/SketchLog/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 22.0

[node name="Copy" type="Button" parent="Log/SketchLog/VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "Copy To Clipboard"

[node name="Open" type="Button" parent="Log/SketchLog/VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
text = "Open In window ^"

[node name="LogBox" type="RichTextLabel" parent="Log/SketchLog/VBoxContainer"]
margin_top = 22.0
margin_right = 1280.0
margin_bottom = 300.0
focus_mode = 2
size_flags_vertical = 3
custom_styles/focus = SubResource( 14 )
custom_colors/selection_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true
override_selected_font_color = true

[node name="Serial" parent="." instance=ExtResource( 3 )]
margin_top = 699.0
margin_right = 1280.0
margin_bottom = 720.0
heading_text = "Serial"
disabled = true

[node name="UartPanel" type="PanelContainer" parent="Serial"]
visible = false
rect_min_size = Vector2( 0, 300 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uart" parent="Serial/UartPanel" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 300.0
